<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>org.xtx</groupId>
	<artifactId>UT-Converter</artifactId>
	<version>1.4.10</version>
	<packaging>jar</packaging>

	<name>UT Converter</name>

	<properties>
		<java.version>19.0.2</java.version>
		<maven.compiler.release>${java.version}</maven.compiler.release>
		<javafx.version>19</javafx.version>
		<slf4j.version>2.0.5</slf4j.version>
		<log4j.version>2.19.0</log4j.version>
		<jaxb.version>2.2.11</jaxb.version>
		<twelvemonkeysio.version>3.9.4</twelvemonkeysio.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<mainClass>org.xtx.ut4converter.MainApp</mainClass>
		<junit.version>5.9.0</junit.version>
		<upgrade.uuid>dd75dbd6-5e0c-4404-904a-a255b632be8b</upgrade.uuid>
	</properties>

	<organization>
		<!-- Used as the 'Vendor' for JNLP generation -->
		<name>Xtreme Labs</name>
	</organization>

	<build>
		<plugins>
			<!-- COMPILE PROJECT -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<release>19</release>
					<source>19</source>
					<target>19</target>
				</configuration>
			</plugin>


			<plugin>
				<groupId>org.openjfx</groupId>
				<artifactId>javafx-maven-plugin</artifactId>
				<version>0.0.8</version>
				<configuration>
					<mainClass>${mainClass}</mainClass>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.0.0-M4</version>
			</plugin>

			<!-- creates UT4X-Converter jar file into /libs folder -->
			<plugin>
				<artifactId>maven-jar-plugin</artifactId>
				<version>3.2.0</version>
				<configuration>
					<outputDirectory>${project.build.directory}/libs</outputDirectory>
					<archive>
						<manifest>
							<addClasspath>true</addClasspath>
							<mainClass>${mainClass}</mainClass>
						</manifest>
					</archive>
				</configuration>
			</plugin>

			<plugin>
				<artifactId>maven-resources-plugin</artifactId>
				<version>3.1.0</version>
				<executions>
					<execution>
						<id>copy-resources1</id>
						<phase>validate</phase>
						<goals>
							<goal>copy-resources</goal>
						</goals>
						<configuration>
							<outputDirectory>${project.build.directory}/libs/g16convert</outputDirectory>
							<resources>
								<resource>
									<directory>app/g16convert</directory>
									<filtering>false</filtering>
								</resource>
							</resources>
						</configuration>
					</execution>
					<execution>
						<id>copy-resources2</id>
						<phase>validate</phase>
						<goals>
							<goal>copy-resources</goal>
						</goals>
						<configuration>
							<outputDirectory>${project.build.directory}/libs/sox</outputDirectory>
							<resources>
								<resource>
									<directory>app/sox</directory>
									<filtering>false</filtering>
								</resource>
							</resources>
						</configuration>
					</execution>
					<execution>
						<id>copy-resources3</id>
						<phase>validate</phase>
						<goals>
							<goal>copy-resources</goal>
						</goals>
						<configuration>
							<outputDirectory>${project.build.directory}/libs/utxextractor</outputDirectory>
							<resources>
								<resource>
									<directory>app/utxextractor</directory>
									<filtering>false</filtering>
								</resource>
							</resources>
						</configuration>
					</execution>
					<execution>
						<id>copy-resources4</id>
						<phase>validate</phase>
						<goals>
							<goal>copy-resources</goal>
						</goals>
						<configuration>
							<outputDirectory>${project.build.directory}/libs/conf</outputDirectory>
							<resources>
								<resource>
									<directory>app/conf</directory>
									<filtering>false</filtering>
								</resource>
							</resources>
						</configuration>
					</execution>
					<execution>
						<id>copy-resources5</id>
						<phase>validate</phase>
						<goals>
							<goal>copy-resources</goal>
						</goals>
						<configuration>
							<outputDirectory>${project.build.directory}/libs/umodel</outputDirectory>
							<resources>
								<resource>
									<directory>app/umodel</directory>
									<filtering>false</filtering>
								</resource>
							</resources>
						</configuration>
					</execution>
				</executions>
			</plugin>


			<plugin>
				<artifactId>maven-dependency-plugin</artifactId>
				<version>3.1.0</version>
				<executions>
					<execution>
						<id>copy-libs</id>
						<phase>prepare-package</phase>
						<goals>
							<goal>copy-dependencies</goal>
						</goals>
						<configuration>
							<outputDirectory>${project.build.directory}/libs</outputDirectory>
							<includeScope>runtime</includeScope>
							<excludeGroupIds>org.openjfx</excludeGroupIds>
						</configuration>
					</execution>
					<execution>
						<id>copy-modules</id>
						<phase>prepare-package</phase>
						<goals>
							<goal>copy-dependencies</goal>
						</goals>
						<configuration>
							<outputDirectory>${project.build.directory}/mods</outputDirectory>
							<includeScope>runtime</includeScope>
							<includeGroupIds>org.openjfx</includeGroupIds>
						</configuration>
					</execution>
				</executions>
			</plugin>

		</plugins>
	</build>

	<profiles>
		<!-- specific parameters for windows only -->
		<profile>
			<id>windows-active</id>
			<activation>
				<os>
					<family>windows</family>
				</os>
			</activation>

			<build>
				<plugins>
					<plugin>
						<groupId>org.codehaus.mojo</groupId>
						<artifactId>exec-maven-plugin</artifactId>
						<version>1.6.0</version>
						<executions>
							<execution>
								<id>create-package</id>
								<phase>package</phase>
								<goals>
									<goal>exec</goal>
								</goals>
								<configuration>
									<executable>${java.home}/bin/jpackage</executable>
									<workingDirectory>${project.build.directory}</workingDirectory>
									<longModulepath>false</longModulepath>
									<environmentVariables>
										<JAVA_HOME>${java.home}</JAVA_HOME>
									</environmentVariables>
									<arguments>
										<!-- jpackage arguments -->
										<argument>--verbose</argument>
										<!-- allow redirect output to window console -->
										<!-- arguement: win-console -->
										<argument>--input</argument>
										<argument>${project.build.directory}/libs</argument>

										<argument>--main-jar</argument>
										<argument>./${project.artifactId}-${project.version}.jar</argument>

										<argument>--dest</argument>
										<argument>package</argument>

										<argument>--app-version</argument>
										<argument>${project.version}</argument>

										<argument>--name</argument>
										<argument>${project.artifactId}</argument>

										<argument>--description</argument>
										<argument>Helps converting Unreal (Tournament) maps to UT3/UT4</argument>

										<argument>--vendor</argument>
										<argument>Thomas 'WinterIsComing' P.</argument>

										<argument>--copyright</argument>
										<argument>UT Converter is licensed under Attribution-NonCommercial-ShareAlike 4.0 International.</argument>

										<!-- jlink arguments -->
										<argument>--module-path</argument>
										<argument>${project.build.directory}/mods</argument>

										<argument>--add-modules</argument>
										<argument>java.base,java.logging,java.desktop,java.xml,jdk.unsupported,javafx.base,javafx.graphics,javafx.controls,javafx.fxml,java.net.http,jdk.crypto.ec</argument>

										<argument>--about-url</argument>
										<argument>https://github.com/xtremexp/UT4X-Converter</argument>

										<argument>--license-file</argument>
										<argument>${project.build.directory}/../LICENSE</argument>

										<argument>--icon</argument>
										<argument>${project.build.directory}/../ut-converter-logo.ico</argument>

										<argument>--win-per-user-install</argument>
										<argument>--win-dir-chooser</argument>
										<argument>--win-shortcut</argument>
										<argument>--win-shortcut-prompt</argument>
										<argument>--win-upgrade-uuid</argument>
										<argument>${upgrade.uuid}</argument>
									</arguments>
								</configuration>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>

	<dependencies>

		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-api</artifactId>
			<version>${log4j.version}</version>
		</dependency>
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-core</artifactId>
			<version>${log4j.version}</version>
		</dependency>
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-slf4j-impl</artifactId>
			<version>${log4j.version}</version>
		</dependency>


		<!-- LOGGING -->
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>${slf4j.version}</version>
		</dependency>

		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>jul-to-slf4j</artifactId>
			<version>${slf4j.version}</version>
		</dependency>

		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>log4j-over-slf4j</artifactId>
			<version>${slf4j.version}</version>
		</dependency>

		<dependency>
			<groupId>javax.vecmath</groupId>
			<artifactId>vecmath</artifactId>
			<version>1.5.2</version>
		</dependency>

		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<version>2.11.0</version>
		</dependency>

		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-math3</artifactId>
			<version>3.6.1</version>
		</dependency>

		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
			<version>3.12.0</version>
		</dependency>

		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-databind</artifactId>
			<version>2.13.4.2</version>
		</dependency>

		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<version>1.18.24</version>
			<scope>provided</scope>
		</dependency>

		<!-- read/write tga/bmp/pcx/tiff texture files -->
		<dependency>
			<groupId>com.twelvemonkeys.imageio</groupId>
			<artifactId>imageio-core</artifactId>
			<version>${twelvemonkeysio.version}</version>
		</dependency>

		<dependency>
			<groupId>com.twelvemonkeys.imageio</groupId>
			<artifactId>imageio-tga</artifactId>
			<version>${twelvemonkeysio.version}</version>
		</dependency>

		<dependency>
			<groupId>com.twelvemonkeys.imageio</groupId>
			<artifactId>imageio-bmp</artifactId>
			<version>${twelvemonkeysio.version}</version>
		</dependency>

		<dependency>
			<groupId>com.twelvemonkeys.imageio</groupId>
			<artifactId>imageio-pcx</artifactId>
			<version>${twelvemonkeysio.version}</version>
		</dependency>

		<dependency>
			<groupId>com.twelvemonkeys.imageio</groupId>
			<artifactId>imageio-tiff</artifactId>
			<version>${twelvemonkeysio.version}</version>
		</dependency>

		<!-- JAVA FX  -->
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-fxml</artifactId>
			<version>${javafx.version}</version>
		</dependency>

		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-controls</artifactId>
			<version>${javafx.version}</version>
		</dependency>


		<!-- TESTING -->
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-api</artifactId>
			<version>${junit.version}</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-engine</artifactId>
			<version>${junit.version}</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-params</artifactId>
			<version>${junit.version}</version>
			<scope>test</scope>
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.hibernate.validator/hibernate-validator -->
		<dependency>
			<groupId>org.hibernate.validator</groupId>
			<artifactId>hibernate-validator</artifactId>
			<version>8.0.0.Final</version>
		</dependency>


	</dependencies>
	<description>Converter for Unreal Tournament 4 (UT2015) game</description>

</project>
